Change message key_name for plugin language

--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -79,7 +79,7 @@
                     <div class="col-6">
                         <div class="row align-items-center justify-content-end">
                             <div class="col-auto">
-                                <button class="btn btn-ec-conversion px-5" type="submit">{{ 'plugin.admin.configration'|trans }}</button>
+                                <button class="btn btn-ec-conversion px-5" type="submit">{{ 'plugin.admin.product_review.configration'|trans }}</button>
                             </div>
                         </div>
                     </div>
