Render to product detail via Snippet method.

--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -12,7 +12,7 @@
 [商品管理]-[商品レビュー]-[編集]画面
 #}
 
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
 {% set menus = ['product', 'product_review'] %}
 
