Refactor code, message follow rules.

--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -35,7 +35,7 @@
                                     <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
                                          title="Tooltip">
                                     <span class="card-title">
-                                        {{ 'plugin.admin.product_review.config.form'|trans }}
+                                        {{ 'plugin.product_review.admin.config.form'|trans }}
                                     </span>
                                         <i class="fa fa-question-circle fa-lg ml-1"></i>
                                     </div>
@@ -53,7 +53,7 @@
                             <div class="card-body">
                                 <div class="row mb-2">
                                     <div class="col-3">
-                                        <label>{{ 'plugin.admin.product_review.config.input.limit'|trans }}</label>
+                                        <label>{{ 'plugin.product_review.admin.config.input.limit'|trans }}</label>
                                     </div>
                                     <div class="col">
                                         {{ form_widget(form.review_max) }}
@@ -79,7 +79,7 @@
                     <div class="col-6">
                         <div class="row align-items-center justify-content-end">
                             <div class="col-auto">
-                                <button class="btn btn-ec-conversion px-5" type="submit">{{ 'plugin.admin.product_review.configration'|trans }}</button>
+                                <button class="btn btn-ec-conversion px-5" type="submit">{{ 'plugin.product_review.admin.configration'|trans }}</button>
                             </div>
                         </div>
                     </div>
