--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -17,7 +17,7 @@
 {% set menus = ['product', 'product_review'] %}
 
 {% block title %}{{ 'plugin.admin.product.management.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.admin.product_review.edit.title.sub'|trans }}{% endblock %}
+{% block sub_title %}{{ 'plugin.product_review.admin.edit.title.sub'|trans }}{% endblock %}
 
 {% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
@@ -37,7 +37,7 @@
                                     <div class="d-inline-block" data-toggle="tooltip" data-placement="top"
                                          title="Tooltip">
                                     <span class="card-title">
-                                        {{ 'plugin.admin.product_review.form.product'|trans }}
+                                        {{ 'plugin.product_review.admin.form.product'|trans }}
                                     </span>
                                         <i class="fa fa-question-circle fa-lg ml-1"></i>
                                     </div>
@@ -55,7 +55,7 @@
                             <div class="card-body">
                                 <div class="row mb-2">
                                     <div class="col-3">
-                                        <label class="control-label">{{ 'plugin.admin.product_review.form.product.name'|trans }}</label>
+                                        <label class="control-label">{{ 'plugin.product_review.admin.form.product.name'|trans }}</label>
                                     </div>
                                     <div class="col">
                                         <div>{{ Product.name }}</div>
@@ -65,7 +65,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.post.date'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.post.date'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -77,7 +77,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.name.contributor'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.name.contributor'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -89,7 +89,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.authorURL'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.authorURL'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -101,7 +101,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.sex'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.sex'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -114,7 +114,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.recommended.level'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.recommended.level'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -127,7 +127,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.comment.title'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.comment.title'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -140,7 +140,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
-                                            <span>{{ 'plugin.admin.product_review.form.comment.content'|trans }}</span>
+                                            <span>{{ 'plugin.product_review.admin.form.comment.content'|trans }}</span>
                                             <i class="fa fa-question-circle fa-lg ml-1"></i>
                                         </div>
                                     </div>
@@ -165,7 +165,7 @@
                                data-action="confirm"
                                title="{{ 'admin.product.product.text11'|trans({
                                    '%name%' : 'admin.product.product.title_product_screen'|trans })
-                               }}"><i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.admin.product_review.form.return.to.search.screen'|trans }}</span></a>
+                               }}"><i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.product_review.admin.form.return.to.search.screen'|trans }}</span></a>
                         </div>
                     </div>
                     <div class="col-6">
