--- a/Resource/template/default/error.twig
+++ b/Resource/template/default/error.twig
@@ -42,7 +42,7 @@
 {% endblock stylesheet %}
 
 {% block main %}
-    <h1 class="page-heading">{{ 'plugin.front.product_review.error'|trans }}</h1>
+    <h1 class="page-heading">{{ 'plugin.product_review.front.error'|trans }}</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -54,7 +54,7 @@
                 <div class="row no-padding">
                     <div class="btn_group col-sm-offset-4 col-sm-4">
                         <p>
-                            <a href="{{ url('homepage') }}" class="btn btn-info btn-block">{{ 'plugin.front.product_review.top.page.link'|trans }}</a>
+                            <a href="{{ url('homepage') }}" class="btn btn-info btn-block">{{ 'plugin.product_review.front.top.page.link'|trans }}</a>
                         </p>
                     </div>
                 </div>
